# DataDistribution

./: .gitignore  CMakeLists.txt  README.md
cmake/: CMakeLists.txt.in  FindAliceO2.cmake  FindUCX.cmake  jemalloc.cmake
doc/: CMakeLists.txt  README.md  StfBuilder.1  StfBuilder.md
script/: CMakeLists.txt  README.md  datadist_standalone_chain.json  datadist_start_standalone.sh.in  discovery-flp-epn-chain.json  flp-epn-dds-topology.xml  readout-emu-flp-epn-chain.json  setup_consul.sh  start_Discovery-3FLP-3EPN.sh  start_Discovery-3FLP-3EPN.sh.in  start_Emulator-3FLP-3EPN.sh.in
script/readout_cfg/: readout_emu.cfg
src/: CMakeLists.txt
src/DataDistControl/: CMakeLists.txt  DataDistControl.proto
src/ReadoutEmulator/: CMakeLists.txt  CruEmulator.cxx  CruEmulator.h  CruMemoryHandler.cxx  CruMemoryHandler.h  ReadoutDevice.cxx  ReadoutDevice.h  runReadoutEmulatorDevice.cxx
src/StfBuilder/: CMakeLists.txt  StfBuilderDevice.cxx  StfBuilderDevice.h  StfBuilderInput.cxx  StfBuilderInput.h  SubTimeFrameBuilderDevice.cxx  SubTimeFrameBuilderDevice.h  SubTimeFrameBuilderInput.cxx  SubTimeFrameBuilderInput.h  runStfBuilderDevice.cxx  runSubTimeFrameBuilderDevice.cxx
src/StfSender/: CMakeLists.txt  StfSenderDevice.cxx  StfSenderDevice.h  StfSenderOutput.cxx  StfSenderOutput.h  StfSenderOutputDefs.h  StfSenderOutputFairMQ.cxx  StfSenderOutputFairMQ.h  StfSenderOutputFairmq.cxx  StfSenderOutputFairmq.h  StfSenderOutputUCX.cxx  StfSenderOutputUCX.h  StfSenderRpc.cxx  StfSenderRpc.h  SubTimeFrameSenderDevice.cxx  SubTimeFrameSenderDevice.h  SubTimeFrameSenderOutput.cxx  SubTimeFrameSenderOutput.h  runStfSenderDevice.cxx  runSubTimeFrameSenderDevice.cxx
src/TfBuilder/: CMakeLists.txt  TfBuilder.cxx  TfBuilderDevice.cxx  TfBuilderDevice.h  TfBuilderInput.cxx  TfBuilderInput.h  TfBuilderInputDefs.h  TfBuilderInputFairMQ.cxx  TfBuilderInputFairMQ.h  TfBuilderInputUCX.cxx  TfBuilderInputUCX.h  TfBuilderRpc.cxx  TfBuilderRpc.h  TimeFrameBuilderDevice.cxx  TimeFrameBuilderDevice.h  TimeFrameBuilderInput.cxx  TimeFrameBuilderInput.h  runTfBuilderDevice.cxx  runTimeFrameBuilderDevice.cxx
src/TfScheduler/: CMakeLists.txt  TfSchedulerConnManager.cxx  TfSchedulerConnManager.h  TfSchedulerDevice.cxx  TfSchedulerDevice.h  TfSchedulerInstance.cxx  TfSchedulerInstance.h  TfSchedulerInstanceRpc.cxx  TfSchedulerInstanceRpc.h  TfSchedulerStfInfo.cxx  TfSchedulerStfInfo.h  TfSchedulerTfBuilderInfo.cxx  TfSchedulerTfBuilderInfo.h  TfSchedulerTokenManager.cxx  TfSchedulerTokenManager.h  runTfScheduler.cxx
src/common/: CMakeLists.txt  DataModelUtils.h  FilePathUtils.cxx  MemoryUtils.h  ReadoutDataModel.cxx  ReadoutDataModel.h  RootGui.cxx  SubTimeFrameBuilder.cxx  SubTimeFrameBuilder.h  SubTimeFrameDPL.cxx  SubTimeFrameDPL.h  SubTimeFrameDataModel.cxx  SubTimeFrameDataModel.h  SubTimeFrameFile.cxx  SubTimeFrameFile.h  SubTimeFrameFileReader.cxx  SubTimeFrameFileReader.h  SubTimeFrameFileSink.cxx  SubTimeFrameFileSink.h  SubTimeFrameFileSource.cxx  SubTimeFrameFileSource.h  SubTimeFrameFileWriter.cxx  SubTimeFrameFileWriter.h  SubTimeFrameUtils.cxx  SubTimeFrameVisitors.cxx  SubTimeFrameVisitors.h
src/common/base/: CMakeLists.txt  ConcurrentQueue.h  DataDistLogger.cxx  DataDistLogger.h  FilePathUtils.cxx  FilePathUtils.h  Utilities.h
src/common/discovery/: CMakeLists.txt  Config.h  ConfigConsul.cxx  ConfigConsul.h  ConfigParameters.h  DataDistributionOptions.h  StfSenderRpcClient.cxx  StfSenderRpcClient.h  TfBuilderRpcClient.h  TfSchedulerRpcClient.cxx  TfSchedulerRpcClient.h  discovery.proto
src/common/fmqtools/: CMakeLists.txt  FmqUtilities.cxx  FmqUtilities.h
src/common/include/: ConcurrentQueue.h  DataModelUtils.h  FilePathUtils.h  MemoryUtils.h  ReadoutDataModel.h  RootGui.h  SubTimeFrameBuilder.h  SubTimeFrameDPL.h  SubTimeFrameDataModel.h  SubTimeFrameFile.h  SubTimeFrameFileReader.h  SubTimeFrameFileSink.h  SubTimeFrameFileSource.h  SubTimeFrameFileWriter.h  SubTimeFrameUtils.h  SubTimeFrameVisitors.h  Utilities.h
src/common/include/discovery/: Config.h  ConfigConsul.h  ConfigParameters.h  StfSenderRpcClient.h  TfBuilderRpcClient.h  TfSchedulerRpcClient.h
src/common/monitoring/: CMakeLists.txt  DataDistMonitoring.cxx  DataDistMonitoring.h
src/common/rpc/: CMakeLists.txt  StfSenderRpcClient.cxx  StfSenderRpcClient.h  TfBuilderRpcClient.h  TfSchedulerRpcClient.cxx  TfSchedulerRpcClient.h
src/common/ucxtools/: CMakeLists.txt  UCXSendRecv.h  UCXUtilities.cxx  UCXUtilities.h
src/test/dpl/: CMakeLists.txt  start_StfBuilderDplAdapterTest.sh.in  test_StfBuilderDplAdapter.cxx
src/tests/: CMakeLists.txt  test_Bitmap.cxx  test_FilePathUtils.cxx  test_FmtPatterns.cxx
